ActionActuator do not deactivate on state change #30179

Closed
opened 2012-02-14 11:07:52 +01:00 by Monster · 8 comments

Category: Animation

%%%OS: XP professional
GPU: ATI Mobility Radeon X2300
BGE: 2.61

This is an hard to identify bug. My analyzes might be incorrect. The issue is there.
It is important when using states and ActionActuators for character animation.

State A:

  • Activates an ActionActuator to play action "A" (play mode) from 1..10
  • After 60 frames the state changes to state B

State B:

  • Activates an ActionActuator to play action"B" (play mode) from 1..25
  • After 60 frames the state changes to state A

I can't find any docs but I think this happens on state change: if there is no connection to any actuator, the actuator gets deactivated.

The ActionActuator seems not to act like this. When the ActionActuator is running on state switch it keeps running even without an controller.
This produces unexpected animations. Together with the issues from Bug 30178 the results are really strange.
%%%

**Category**: Animation %%%OS: XP professional GPU: ATI Mobility Radeon X2300 BGE: 2.61 This is an hard to identify bug. My analyzes might be incorrect. The issue is there. It is important when using states and ActionActuators for character animation. State A: - Activates an ActionActuator to play action "A" (play mode) from 1..10 - After 60 frames the state changes to state B State B: - Activates an ActionActuator to play action"B" (play mode) from 1..25 - After 60 frames the state changes to state A I can't find any docs but I think this happens on state change: if there is no connection to any actuator, the actuator gets deactivated. The ActionActuator seems not to act like this. When the ActionActuator is running on state switch it keeps running even without an controller. This produces unexpected animations. Together with the issues from Bug 30178 the results are really strange. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

Added subscriber: @raco

Added subscriber: @raco

Made a simpler blend file which tests Set State Actuator with Action Actuator. Play 'Scene' and see that it works as it should. Then play 'Scene_Sensors_reused' and see that it doesn't work, while it should.

Monster's original blend file also contains a lot of sensors that are reused. As this second blend file clearly shows that this gives issues, maybe this explains the weird things happening in the first.

Actions_sensors_bug.blend

Made a simpler blend file which tests Set State Actuator with Action Actuator. Play 'Scene' and see that it works as it should. Then play 'Scene_Sensors_reused' and see that it doesn't work, while it should. Monster's original blend file also contains a lot of sensors that are reused. As this second blend file clearly shows that this gives issues, maybe this explains the weird things happening in the first. [Actions_sensors_bug.blend](https://archive.blender.org/developer/F106517/Actions_sensors_bug.blend)

Added subscriber: @panzergame

Added subscriber: @panzergame

You can try in python to stop the animation during state switch.

You can try in python to stop the animation during state switch.

This issue was referenced by 0d638172ec

This issue was referenced by 0d638172ec1fb8af808533f7d9535a52af23b33d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30179
No description provided.