BGE: Fix T30179 action actuator not stoped when state changed.

The function SCA_IActuator::DecLink is now under virtual : in some case the actuator have to know when is useless.